Test page update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--metatextblock-->
     <title>Фотограф видеограф Карина Сологуб</title>
     <meta name="description" content="Фотограф видеограф Карина Сологуб">
-    <meta property="og:url" content="http://karynasolohub.tilda.ws">
+    <meta property="og:url" content="karynasolohub.pp.ua">
     <meta property="og:title" content="Фотограф видеограф Карина Сологуб">
     <meta property="og:description" content="Фотограф видеограф Карина Сологуб">
     <meta property="og:type" content="website">
@@ -42,19 +42,8 @@
     <script src="https://static.tildacdn.com/js/tilda-zoom-2.0.min.js" charset="utf-8"></script>
     <script src="https://static.tildacdn.com/js/tilda-catalog-1.1.min.js" charset="utf-8"></script>
     <script type="text/javascript">
-    window.dataLayer = window.dataLayer || [];
     </script>
-    <script type="text/javascript">
-    if ((/bot|google|yandex|baidu|bing|msn|duckduckbot|teoma|slurp|crawler|spider|robot|crawling|facebook/i.test(navigator.userAgent)) === false && typeof(sessionStorage) != 'undefined' && sessionStorage.getItem('visited') !== 'y') {
-        var style = document.createElement('style');
-        style.type = 'text/css';
-        style.innerHTML = '@media screen and (min-width: 980px) {.t-records {opacity: 0;}.t-records_animated {-webkit-transition: opacity ease-in-out .2s;-moz-transition: opacity ease-in-out .2s;-o-transition: opacity ease-in-out .2s;transition: opacity ease-in-out .2s;}.t-records.t-records_visible {opacity: 1;}}';
-        document.getElementsByTagName('head')[0].appendChild(style);
-        $(document).ready(function() { $('.t-records').addClass('t-records_animated');
-            setTimeout(function() { $('.t-records').addClass('t-records_visible');
-                sessionStorage.setItem('visited', 'y'); }, 400); });
-    }
-    </script>
+
 </head>
 
 <body class="t-body" style="margin: 0px;">
